financial/kube/minimal/minimal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minimal-deployment
  labels:
    app: minimal-app-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minimal-app-1
  template:
    metadata:
      labels:
        app: minimal-app-1
    spec:
      containers:
      - image: vllm/vllm-openai:latest
        ports:
        - containerPort: 8000
        name: gpu-container
        resources:
          limits:
            cpu: 10
            memory: 40G
            # nvidia.com/a100: "4"
            nvidia.com/gpu: "4"
          requests:
            cpu: 5
            memory: 20G
            nvidia.com/gpu: "4"
        command:
        - /bin/bash
        - -c
        - |
          python3 -m vllm.entrypoints.openai.api_server \
             --dtype auto --api-key ewjiofh2nd3och291n2ui2saf22f
        volumeMounts:
        # todo don't have same name
        - name: model-cache
          mountPath: /root/.cache/huggingface
        - name: model-cache
          mountPath: /var/lib/docker
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: nvidia.com/gpu.product
      #           operator: In
      #           values:
      #           - NVIDIA-A100-SXM4-80GB
      # - key: kubernetes.io/hostname
      #   operator: NotIn
      #   values:
      #   # - hostname_blacklist
      volumes:
      - name: model-cache
        persistentVolumeClaim:
          claimName: vllm-kai-pvc
