financial/kube/minimal/minimal_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  ingressClassName: haproxy
  rules:
  - host: minimal.nrp-nautilus.io
    http:
      paths:
      - backend:
          service:
            name: minimal-service
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - minimal.nrp-nautilus.io
---
apiVersion: v1
kind: Service
metadata:
  name: minimal-service
  labels:
    app: minimal-app-1
spec:
  selector:
    app: minimal-app-1
  ports:
  - name: http
    protocol: TCP
    port: 8000
